Qsampler - A LinuxSampler Qt GUI Interface
------------------------------------------

ChangeLog


0.4.1  2016-09-14  End of Summer'16 release.

* Fixed a race condition on creating sampler channels that ended
  in duplicate channel strips; also fixed channel auto-arrange.
  
* Dropped the --enable-qt5 from configure as found redundant
  given that's the build default anyway (suggestion by Guido
  Scholz, while for Qtractor, thanks).

* Automake: set environment variable GCC_COLORS=auto to allow GCC to
  auto detect whether it (sh/c)ould output its messages in color.


0.4.0  2016-04-05  Spring'16 release frenzy.

* Added application keywords to freedesktop.org's AppData.

* Prevent x11extras module from use on non-X11/Unix plaforms.

* Messages standard output capture has been improved again, now
  in both ways a non-blocking pipe may get.

* Single/unique application instance control adapted to Qt5/X11.


0.3.1  2015-07-19  Summer'15 release frenzy.

* Fixed configure script's Qt include directory lookup for some
  64bit Linux flavours.

* Prefer Qt5 over Qt4 by default with configure script.

* A new top-level widget window geometry state save and restore
  sub-routine is now in effect. (EXPERIMENTAL)

* Fixed for some strict tests for Qt4 vs. Qt5 configure builds.


0.3.0  2015-03-25  Pre-LAC2015 release frenzy.

* Added application description as freedesktop.org's AppData.

* Added this "Don't ask/show this again" option to some if not most
  of the nagging warning/error message boxes.

* Mac OS X: Fixed default path of linuxsampler binary.

* When closing qsampler and showing the user the dialog whether to
  stop the LinuxSampler backend, set the default selection to "Yes".

* Master volume slider now getting proper layout when changing its
  main toolbar orientation.

* Messages standard output capture has been slightly improved
  as for non-blocking i/o, whenever available.

* Adjusted configure check for libgig to detect the new --includedir.
