@@ -4,6 +4,14 @@ Qsampler - A LinuxSampler Qt GUI Interface
 ChangeLog
 
 
+GIT HEAD
+
+- Almost complete overhaul on the configure script command
+  line options, wrt. installation directories specification,
+  eg. --prefix, --bindir, --libdir, --datadir and --mandir.
+  (EXPERIMENTAL)
+
+
 0.4.1  2016-09-14  End of Summer'16 release.
 
 * Fixed a race condition on creating sampler channels that ended
